--- a/packages/package.json
+++ b/packages/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "29.5.14",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
+    "daproj": "workspace:./lib/daproj",
     "eslint": "9.18.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "10.0.1",
