--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,12 +5,13 @@
   "main": "build/index.js",
   "scripts": {
     "build": "pnpm build:clean && pnpm build:raw",
-    "build:raw": "tsc -p tsconfig-build.json",
     "build:clean": "rm -rf build",
+    "build:raw": "tsc -p tsconfig-build.json",
+    "lint": "bin/lint.mjs",
     "test": "NODE_ENV=test jest",
-    "test:watch": "pnpm run test --watch",
     "test:coverage": "pnpm run test --coverage",
-    "test:coverage:clean": "rm -rf coverage"
+    "test:coverage:clean": "rm -rf coverage",
+    "test:watch": "pnpm run test --watch"
   },
   "dependencies": {
     "find-process": "1.4.7",
