chore: quitar music domain

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,2 @@
-include /apps/mcenter/nginx/front.conf;
-include /apps/mcenter/nginx/back.conf;
-include /apps/mcenter/nginx/music.conf;
+include /apps/mcenter/nginx/front.conf
+include /apps/mcenter/nginx/back.conf
