--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "#shared": "workspace:../shared/build",
+    "@nestjs/common": "11.1.3",
+    "@nestjs/core": "11.1.3",
+    "@nestjs/platform-express": "11.1.3",
     "axios": "1.7.9",
     "chevrotain": "workspace:./lib/chevrotain",
     "cors": "2.8.5",
@@ -45,6 +48,8 @@
   "devDependencies": {
     "#sharedSrc": "workspace:../shared/src",
     "@chevrotain/types": "11.0.3",
+    "@nestjs/cli": "11.0.7",
+    "@nestjs/testing": "11.1.3",
     "@types/cors": "2.8.17",
     "@types/express": "5.0.0",
     "@types/fluent-ffmpeg": "2.1.27",
