--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,2 +1,2 @@
-include /apps/mcenter/nginx/front.conf
-include /apps/mcenter/nginx/back.conf
+include /apps/mcenter/nginx/front.conf;
+include /apps/mcenter/nginx/back.conf;
