--- a/packages/package.json
+++ b/packages/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "name": "mcenter",
-  "version": "3.14.1",
-  "description": "Centro Multimedia",
+  "version": "4.0.0-alpha11",
+  "description": "Multimedia Center",
   "license": "UNLICENSED",
   "author": "Dani Sales",
   "contributors": [
