--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,7 +26,7 @@
     "chevrotain": "workspace:./lib/chevrotain",
     "cors": "2.8.5",
     "date-ops": "2.2.0",
-    "envalid": "8.0.0",
+    "envalid": "8.1.0",
     "express": "5.1.0",
     "fluent-ffmpeg": "2.1.3",
     "glob": "11.0.3",
@@ -65,7 +65,7 @@
     "@types/supertest": "6.0.3",
     "dotenv": "17.2.0",
     "jest": "workspace:../node_modules/jest",
-    "mongodb-memory-server": "^10.1.4",
+    "mongodb-memory-server": "10.1.4",
     "nodemon": "3.1.10",
     "supertest": "7.1.3",
     "ts-node": "10.9.2",
