--- a/packages/vlc/package.json
+++ b/packages/vlc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "vlc",
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
@@ -8,7 +8,6 @@
     "build:clean": "rm -rf build",
     "build:raw": "tsc -p tsconfig-build.json && tsc-alias -p tsconfig-build.json",
     "lint": "bin/lint.mjs",
-    "migrate": "./src/main/db/migrations/migrate.sh",
     "start": "NODE_ENV=production node build/index.js",
     "start:watch": "NODE_ENV=development nodemon",
     "test": "NODE_ENV=test jest --maxWorkers=1 --testPathIgnorePatterns=VLCProcess*",
@@ -17,21 +16,21 @@
     "test:watch": "pnpm run test --watch"
   },
   "dependencies": {
-    "#shared": "workspace:../shared/build",
-    "dotenv": "16.3.1",
-    "fast-xml-parser": "4.2.7",
-    "html-entities": "2.4.0",
-    "socket.io-client": "4.7.2",
-    "zod": "3.22.2"
+    "$shared": "workspace:../shared/build",
+    "dotenv": "17.2.0",
+    "fast-xml-parser": "5.2.5",
+    "html-entities": "2.6.0",
+    "socket.io-client": "4.8.1",
+    "zod": "3.25.76"
   },
   "devDependencies": {
-    "#sharedSrc": "workspace:../shared/src",
-    "@types/jest": "29.5.4",
-    "@types/node": "18.17.14",
+    "$sharedSrc": "workspace:../shared/src",
+    "@types/jest": "30.0.0",
+    "@types/node": "24.0.13",
     "jest": "workspace:../node_modules/jest",
-    "nodemon": "2.0.20",
-    "socket.io": "4.7.2",
-    "ts-node": "10.9.1",
-    "tsc-alias": "1.8.7"
+    "nodemon": "3.1.10",
+    "socket.io": "4.8.1",
+    "ts-node": "10.9.2",
+    "tsc-alias": "1.8.16"
   }
 }
