chore(vlc): scripts

--- a/packages/vlc/package.json
+++ b/packages/vlc/package.json
@@ -7,8 +7,8 @@
     "build": "pnpm build:clean && pnpm build:raw",
     "build:clean": "rm -rf build",
     "build:raw": "tsc -p tsconfig-build.json && tsc-alias -p tsconfig-build.json",
+    "build:rebuild": "bin/rebuild.mjs",
     "lint": "bin/lint.mjs",
-    "rebuild": "bin/rebuild.mjs",
     "start": "NODE_ENV=production node build/index.js",
     "start:watch": "NODE_ENV=development nodemon",
     "stop": "bin/stop.mjs",
