--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,11 +17,11 @@
     "test:watch": "pnpm run test --watch"
   },
   "dependencies": {
+    "$shared": "workspace:../shared/build",
     "@nestjs/common": "11.1.3",
     "@nestjs/core": "11.1.3",
     "@nestjs/platform-express": "11.1.3",
     "@nestjs/serve-static": "^5.0.3",
-    "$shared": "workspace:../shared/build",
     "axios": "1.10.0",
     "chevrotain": "workspace:./lib/chevrotain",
     "cors": "2.8.5",
@@ -33,6 +33,7 @@
     "helmet": "8.1.0",
     "jsdom": "26.1.0",
     "luxon": "3.7.1",
+    "mime-types": "^3.0.1",
     "mongoose": "7.5.0",
     "nestjs-zod": "4.3.1",
     "node-id3": "0.2.9",
@@ -48,6 +49,7 @@
     "zod": "3.25.74"
   },
   "devDependencies": {
+    "$sharedSrc": "workspace:../shared/src",
     "@chevrotain/types": "11.0.3",
     "@nestjs/cli": "11.0.7",
     "@nestjs/testing": "11.1.3",
@@ -57,12 +59,12 @@
     "@types/jest": "30.0.0",
     "@types/jsdom": "21.1.7",
     "@types/luxon": "3.6.2",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "24.0.14",
     "@types/node-schedule": "2.1.8",
     "@types/serve-index": "1.9.4",
     "@types/sha256-file": "1.0.3",
     "@types/supertest": "6.0.3",
-    "$sharedSrc": "workspace:../shared/src",
     "dotenv": "17.2.0",
     "jest": "workspace:../node_modules/jest",
     "mongodb-memory-server": "10.1.4",
