--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,8 +19,9 @@
   "dependencies": {
     "@nestjs/common": "11.1.3",
     "@nestjs/core": "11.1.3",
+    "@nestjs/event-emitter": "3.0.1",
     "@nestjs/platform-express": "11.1.3",
-    "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/serve-static": "5.0.3",
     "$shared": "workspace:../shared/build",
     "axios": "1.10.0",
     "chevrotain": "workspace:./lib/chevrotain",
