fix: use winston logging and works get from frontend

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,12 +17,12 @@
     "test:watch": "pnpm run test --watch"
   },
   "dependencies": {
+    "$shared": "workspace:../shared/build",
     "@nestjs/common": "11.1.3",
     "@nestjs/core": "11.1.3",
     "@nestjs/event-emitter": "3.0.1",
     "@nestjs/platform-express": "11.1.3",
     "@nestjs/serve-static": "5.0.3",
-    "$shared": "workspace:../shared/build",
     "axios": "1.10.0",
     "chevrotain": "workspace:./lib/chevrotain",
     "cors": "2.8.5",
@@ -34,8 +34,9 @@
     "helmet": "8.1.0",
     "jsdom": "26.1.0",
     "luxon": "3.7.1",
-    "mime-types": "^3.0.1",
+    "mime-types": "3.0.1",
     "mongoose": "7.5.0",
+    "nest-winston": "1.10.2",
     "nestjs-zod": "4.3.1",
     "node-id3": "0.2.9",
     "node-media-server": "4.0.18",
@@ -46,10 +47,13 @@
     "serve-index": "1.9.1",
     "sha256-file": "1.0.0",
     "socket.io": "4.8.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "youtube-mp3-downloader": "0.7.11",
     "zod": "3.25.74"
   },
   "devDependencies": {
+    "$sharedSrc": "workspace:../shared/src",
     "@chevrotain/types": "11.0.3",
     "@nestjs/cli": "11.0.7",
     "@nestjs/testing": "11.1.3",
@@ -65,7 +69,6 @@
     "@types/serve-index": "1.9.4",
     "@types/sha256-file": "1.0.3",
     "@types/supertest": "6.0.3",
-    "$sharedSrc": "workspace:../shared/src",
     "dotenv": "17.2.0",
     "jest": "workspace:../node_modules/jest",
     "mongodb-memory-server": "10.1.4",
