chore: move fixtures from server to shared

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -13,10 +13,7 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "build",
-    "paths": {
-      "#tests": ["tests"],
-      "#tests/*": ["tests/*"]
-    },
+    "paths": {},
     "sourceMap": true,
     "strict": true,
     "target": "es2015",
