--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,12 +17,12 @@
     "test:watch": "pnpm run test --watch"
   },
   "dependencies": {
-    "$shared": "workspace:../shared/build",
     "@nestjs/common": "11.1.3",
     "@nestjs/core": "11.1.3",
     "@nestjs/event-emitter": "3.0.1",
     "@nestjs/platform-express": "11.1.3",
     "@nestjs/serve-static": "5.0.3",
+    "$shared": "workspace:../shared/build",
     "axios": "1.10.0",
     "chevrotain": "workspace:./lib/chevrotain",
     "cors": "2.8.5",
@@ -54,7 +54,6 @@
     "zod": "3.25.74"
   },
   "devDependencies": {
-    "$sharedSrc": "workspace:../shared/src",
     "@chevrotain/types": "11.0.3",
     "@nestjs/cli": "11.0.7",
     "@nestjs/testing": "11.1.3",
@@ -70,6 +69,8 @@
     "@types/serve-index": "1.9.4",
     "@types/sha256-file": "1.0.3",
     "@types/supertest": "6.0.3",
+    "$sharedSrc": "workspace:../shared/src",
+    "$sharedTests": "workspace:../shared/tests",
     "dotenv": "17.2.0",
     "jest": "workspace:../node_modules/jest",
     "mongodb-memory-server": "10.1.4",
