--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -33,10 +33,6 @@
     "typeRoots": ["node_modules/@types"]
   },
   "exclude": ["node_modules"],
-  "include": [
-    "src/**/*.ts",
-    "tests/**/*.ts",
-    "../shared/src/utils/http/responses/common.ts"
-  ],
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
   "types": ["node"]
 }
