--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -36,7 +36,8 @@
   "include": [
     "src/**/*.ts",
     "tests/**/*.ts",
-    "../shared/src/models/resource/response-format.enum.ts"
+    "../shared/src/models/resources/response-format.enum.ts",
+    "../shared/src/models/resources/m3u8.view.ts"
   ],
   "types": ["node"]
 }
