--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,6 +18,7 @@
     "zod": "3.25.74"
   },
   "devDependencies": {
+    "@types/express": "5.0.3",
     "@types/jest": "29.5.4",
     "@types/node": "22.14.1",
     "jest": "workspace:../node_modules/jest",
