--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,7 +33,8 @@
     "glob": "11.0.3",
     "helmet": "8.1.0",
     "jsdom": "26.1.0",
-    "just-clone": "^6.2.0",
+    "just-clone": "6.2.0",
+    "just-diff": "6.0.2",
     "luxon": "3.7.1",
     "mime-types": "3.0.1",
     "mongoose": "7.5.0",
@@ -48,8 +49,8 @@
     "serve-index": "1.9.1",
     "sha256-file": "1.0.0",
     "socket.io": "4.8.1",
-    "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
+    "winston": "3.17.0",
+    "winston-daily-rotate-file": "5.0.0",
     "youtube-mp3-downloader": "0.7.11",
     "zod": "3.25.74"
   },
@@ -63,7 +64,7 @@
     "@types/jest": "30.0.0",
     "@types/jsdom": "21.1.7",
     "@types/luxon": "3.6.2",
-    "@types/mime-types": "^3.0.1",
+    "@types/mime-types": "3.0.1",
     "@types/node": "24.0.14",
     "@types/node-schedule": "2.1.8",
     "@types/serve-index": "1.9.4",
