feat(front): infinite scroll in history

--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.14.9",
     "@mui/material": "5.14.9",
+    "@tanstack/react-query": "^5.85.5",
     "$shared": "workspace:../shared/build",
     "just-clone": "6.2.0",
     "just-diff": "6.0.2",
@@ -19,7 +20,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "socket.io-client": "4.7.2",
-    "swr": "2.2.2",
     "zod": "3.25.74"
   },
   "devDependencies": {
