--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -38,6 +38,7 @@
     "luxon": "3.7.1",
     "mime-types": "3.0.1",
     "mongoose": "7.5.0",
+    "multer": "2.0.2",
     "nest-winston": "1.10.2",
     "nestjs-zod": "4.3.1",
     "node-id3": "0.2.9",
@@ -49,6 +50,7 @@
     "serve-index": "1.9.1",
     "sha256-file": "1.0.0",
     "socket.io": "4.8.1",
+    "uuid": "11.1.0",
     "winston": "3.17.0",
     "winston-daily-rotate-file": "5.0.0",
     "youtube-mp3-downloader": "0.7.11",
@@ -65,11 +67,13 @@
     "@types/jsdom": "21.1.7",
     "@types/luxon": "3.6.2",
     "@types/mime-types": "3.0.1",
+    "@types/multer": "2.0.0",
     "@types/node": "24.0.14",
     "@types/node-schedule": "2.1.8",
     "@types/serve-index": "1.9.4",
     "@types/sha256-file": "1.0.3",
     "@types/supertest": "6.0.3",
+    "@types/uuid": "10.0.0",
     "$sharedSrc": "workspace:../shared/src",
     "$sharedTests": "workspace:../shared/tests",
     "dotenv": "17.2.0",
