--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,12 +17,12 @@
     "test:watch": "pnpm run test --watch"
   },
   "dependencies": {
+    "$shared": "workspace:../shared/build",
     "@nestjs/common": "11.1.3",
     "@nestjs/core": "11.1.3",
     "@nestjs/event-emitter": "3.0.1",
     "@nestjs/platform-express": "11.1.3",
     "@nestjs/serve-static": "5.0.3",
-    "$shared": "workspace:../shared/build",
     "axios": "1.10.0",
     "chevrotain": "workspace:./lib/chevrotain",
     "cors": "2.8.5",
@@ -36,6 +36,7 @@
     "just-clone": "6.2.0",
     "just-diff": "6.0.2",
     "luxon": "3.7.1",
+    "meilisearch": "^0.52.0",
     "mime-types": "3.0.1",
     "mongoose": "7.5.0",
     "multer": "2.0.2",
@@ -57,6 +58,8 @@
     "zod": "3.25.74"
   },
   "devDependencies": {
+    "$sharedSrc": "workspace:../shared/src",
+    "$sharedTests": "workspace:../shared/tests",
     "@chevrotain/types": "11.0.3",
     "@nestjs/cli": "11.0.7",
     "@nestjs/testing": "11.1.3",
@@ -74,8 +77,6 @@
     "@types/sha256-file": "1.0.3",
     "@types/supertest": "6.0.3",
     "@types/uuid": "10.0.0",
-    "$sharedSrc": "workspace:../shared/src",
-    "$sharedTests": "workspace:../shared/tests",
     "dotenv": "17.2.0",
     "jest": "workspace:../node_modules/jest",
     "mongodb-memory-server": "10.1.4",
