--- a/bin/docker/docker-compose.yml
+++ b/bin/docker/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     ports:
       - 7700:7700
     env_file:
-      - .env.db
+      - ../../packages/server/.env
     volumes:
       - mcenter_meilisearch_data:/meili_data
     restart: unless-stopped
