fix(back): updated max body size (for upload files)

--- a/nginx/back.conf
+++ b/nginx/back.conf
@@ -5,6 +5,8 @@ server {
     server_name mcenter.*;
     listen 3001 ssl;
 
+    client_max_body_size 1000M;
+
     include apps/common/ssl_certs.conf;
     include apps/common/security_headers.conf;
 
