--- a/bin/docker/docker-compose.yml
+++ b/bin/docker/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "${MCENTER_SERVER_PORT}:8080"
     restart: always
     volumes:
-      - ${MCENTER_SERVER_MEDIA_PATH}:/home/node/media:ro
+      - ${MCENTER_SERVER_MEDIA_PATH}:/home/node/media:rw
       - ../../packages/server/logs:/packages/app/logs
       - ../../packages/server/.calendar.js:/packages/app/.calendar.js:ro
       - ../../packages/server/.schedule.js:/packages/app/.schedule.js:ro
