--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -19,7 +19,10 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "11.0.5",
     "socket.io-client": "4.7.2",
+    "winston": "3.17.0",
+    "winston-transport": "4.9.0",
     "zod": "3.25.74"
   },
   "devDependencies": {
