--- a/bin/docker/docker-compose.yml
+++ b/bin/docker/docker-compose.yml
@@ -16,6 +16,9 @@ services:
     ports:
       - "${MCENTER_SERVER_PORT}:8080"
     restart: always
+    depends_on:
+      - meilisearch
+      - redis
     volumes:
       - ${MCENTER_SERVER_MEDIA_PATH}:/home/node/media:rw
       - ../../packages/server/logs:/packages/app/logs
@@ -53,7 +56,22 @@ services:
     volumes:
       - mcenter_meilisearch_data:/meili_data
     restart: unless-stopped
+  redis:
+    image: redis:8.2.1-alpine
+    container_name: mcenter_redis
+    restart: always
+    ports:
+      - "6379:6379"
+    env_file:
+      - ../../packages/server/.env
+    environment:
+      - REDIS_PASSWORD
+    volumes:
+      - mcenter_redis_data:/data
+    command: ["sh", "-c", "redis-server --appendonly yes --requirepass \"$$REDIS_PASSWORD\""]
 
 volumes:
   mcenter_meilisearch_data:
+    driver: local
+  mcenter_redis_data:
     driver: local
