--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -12,6 +12,7 @@
     "@mui/icons-material": "5.14.9",
     "@mui/material": "5.14.9",
     "@tanstack/react-query": "^5.85.5",
+    "@textea/json-viewer": "4.0.1",
     "$shared": "workspace:../shared/build",
     "just-clone": "6.2.0",
     "just-diff": "6.0.2",
