--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,16 +17,20 @@
     "test:watch": "pnpm run test --watch"
   },
   "dependencies": {
+    "$shared": "workspace:../shared/build",
     "@nestjs/bullmq": "11.0.3",
     "@nestjs/common": "11.1.3",
     "@nestjs/core": "11.1.3",
     "@nestjs/event-emitter": "3.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.1.3",
     "@nestjs/serve-static": "5.0.3",
-    "$shared": "workspace:../shared/build",
     "axios": "1.10.0",
+    "bcryptjs": "^3.0.2",
     "bullmq": "5.58.5",
     "chevrotain": "workspace:./lib/chevrotain",
+    "cookie-parser": "^1.4.7",
     "cors": "2.8.5",
     "date-ops": "2.2.0",
     "envalid": "8.1.0",
@@ -48,6 +52,9 @@
     "node-id3": "0.2.9",
     "node-media-server": "4.0.18",
     "node-schedule": "2.1.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "rand-picker": "1.1.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2",
@@ -60,9 +67,12 @@
     "zod": "3.25.74"
   },
   "devDependencies": {
+    "$sharedSrc": "workspace:../shared/src",
+    "$sharedTests": "workspace:../shared/tests",
     "@chevrotain/types": "11.0.3",
     "@nestjs/cli": "11.0.7",
     "@nestjs/testing": "11.1.3",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "2.8.19",
     "@types/express": "5.0.3",
     "@types/fluent-ffmpeg": "2.1.27",
@@ -73,16 +83,18 @@
     "@types/multer": "2.0.0",
     "@types/node": "24.0.14",
     "@types/node-schedule": "2.1.8",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/serve-index": "1.9.4",
     "@types/sha256-file": "1.0.3",
     "@types/supertest": "6.0.3",
     "@types/uuid": "10.0.0",
-    "$sharedSrc": "workspace:../shared/src",
-    "$sharedTests": "workspace:../shared/tests",
     "dotenv": "17.2.0",
     "jest": "workspace:../node_modules/jest",
     "mongodb-memory-server": "10.1.4",
     "nodemon": "3.1.10",
+    "playwright": "^1.55.0",
     "supertest": "7.1.3",
     "ts-node": "10.9.2",
     "tsc-alias": "1.8.16"
