--- a/packages/server/tsconfig-build.json
+++ b/packages/server/tsconfig-build.json
@@ -9,6 +9,7 @@
     "**/tests",
     "spec",
     "src/**/tests/*",
+    "src/core/dev/*",
     "src/**/testUtils.ts",
     "**/*.spec.ts",
     "**/*.test.ts"
