--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "build": "pnpm build:clean && pnpm build:raw",
-    "build:clean": "rm -rf build",
-    "build:raw": "tsc -p tsconfig-build.json && tsc-alias -p tsconfig-build.json",
+    "build": "./bin/build.sh",
     "db:migrate": "./bin/migrations/migrate.mjs",
     "lint": "bin/lint.mjs",
     "start": "NODE_ENV=production node build/index.js",
@@ -17,7 +15,6 @@
     "test:watch": "pnpm run test --watch"
   },
   "dependencies": {
-    "$shared": "workspace:../shared/build",
     "@nestjs-modules/mailer": "2.0.2",
     "@nestjs/bullmq": "11.0.3",
     "@nestjs/common": "11.1.6",
@@ -27,6 +24,7 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.1.6",
     "@nestjs/serve-static": "5.0.3",
+    "$shared": "workspace:../shared/build",
     "axios": "1.12.2",
     "bcryptjs": "3.0.2",
     "bullmq": "5.58.8",
@@ -72,8 +70,6 @@
     "zod": "3.25.74"
   },
   "devDependencies": {
-    "$sharedSrc": "workspace:../shared/src",
-    "$sharedTests": "workspace:../shared/tests",
     "@chevrotain/types": "11.0.3",
     "@nestjs/cli": "11.0.7",
     "@nestjs/testing": "11.1.3",
@@ -98,6 +94,8 @@
     "@types/sha256-file": "1.0.3",
     "@types/supertest": "6.0.3",
     "@types/uuid": "10.0.0",
+    "$sharedSrc": "workspace:../shared/src",
+    "$sharedTests": "workspace:../shared/tests",
     "dotenv": "17.2.0",
     "jest": "link:../node_modules/jest",
     "mongodb-memory-server": "10.1.4",
