--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.5.4",
+    "@svgr/webpack": "8.1.0",
     "@types/node": "18.17.14",
     "@types/react": "18.2.21",
     "$sharedSrc": "workspace:../shared/src"
