fix(front): some styles and performance  problems

--- a/packages/front/.vscode/launch.json
+++ b/packages/front/.vscode/launch.json
@@ -6,7 +6,7 @@
       "request": "launch",
       "serverReadyAction": {
         "action": "debugWithChrome",
-        "pattern": "Local:        (https?://.+)",
+        "pattern": "Local:[\\s]+(https?://.+)",
         "uriFormat": "%s"
       },
       "type": "node-terminal"
