--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -13,9 +13,12 @@
     "@dnd-kit/utilities": "3.2.2",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
+    "@ffmpeg/ffmpeg": "0.12.15",
+    "@ffmpeg/util": "0.12.2",
     "@mui/icons-material": "5.14.9",
     "@mui/material": "5.14.9",
     "@tanstack/react-query": "5.90.10",
+    "@tanstack/react-virtual": "3.13.13",
     "@textea/json-viewer": "4.0.1",
     "$shared": "workspace:../shared/build",
     "just-clone": "6.2.0",
@@ -28,7 +31,8 @@
     "socket.io-client": "4.7.2",
     "winston": "3.18.3",
     "winston-transport": "4.9.0",
-    "zod": "3.25.74"
+    "zod": "3.25.74",
+    "zustand": "5.0.9"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.5.4",
