--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -7,7 +7,6 @@
     "start": "[ -e .env ] && set -a && . ./.env; next start"
   },
   "dependencies": {
-    "$shared": "workspace:../shared/build",
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/modifiers": "9.0.0",
     "@dnd-kit/sortable": "10.0.0",
@@ -21,7 +20,8 @@
     "@tanstack/react-query": "5.90.10",
     "@tanstack/react-virtual": "3.13.13",
     "@textea/json-viewer": "4.0.1",
-    "async-mutex": "^0.5.0",
+    "$shared": "workspace:../shared/build",
+    "async-mutex": "0.5.0",
     "just-clone": "6.2.0",
     "just-diff": "6.0.2",
     "just-extend": "6.2.0",
@@ -36,11 +36,11 @@
     "zustand": "5.0.9"
   },
   "devDependencies": {
-    "$sharedSrc": "workspace:../shared/src",
     "@next/eslint-plugin-next": "13.5.4",
     "@svgr/webpack": "8.1.0",
     "@types/node": "24.10.1",
-    "@types/react": "19.2.7"
+    "@types/react": "19.2.7",
+    "$sharedSrc": "workspace:../shared/src"
   },
   "engines": {
     "node": ">=24"
