--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "11.14.1",
     "@ffmpeg/ffmpeg": "0.12.15",
     "@ffmpeg/util": "0.12.2",
+    "@hookform/resolvers": "5.2.2",
     "@mui/icons-material": "5.14.9",
     "@mui/material": "5.14.9",
     "@tanstack/react-query": "5.90.10",
@@ -28,6 +29,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "7.71.1",
     "react-toastify": "11.0.5",
     "socket.io-client": "4.7.2",
     "winston": "3.18.3",
