--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,7 +24,7 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.1.6",
     "@nestjs/serve-static": "5.0.3",
-    "$shared": "workspace:../shared/src",
+    "$shared": "workspace:../shared/build",
     "axios": "1.12.2",
     "bcryptjs": "3.0.2",
     "bullmq": "5.58.8",
