style: refactor, linting...

--- a/packages/front/tsconfig.json
+++ b/packages/front/tsconfig.json
@@ -14,7 +14,7 @@
       "#modules/*": ["modules/*"],
       "#musics/*": ["modules/musics/*"],
       "#styles/*": ["styles/*"],
-      "#uikit/*": ["modules/ui-kit/*"],
+      "#uikit/*": ["modules/ui-kit/*"]
     },
     "plugins": [
       {
