chore(release): 4.31.0-alpha.0

--- a/packages/package.json
+++ b/packages/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "mcenter",
-  "version": "4.30.1",
+  "version": "4.31.0-alpha.0",
   "description": "Multimedia Center",
   "license": "UNLICENSED",
   "author": "Dani Sales",
